--- a/wordpress_playbooks/roles/wordpress/templates/nginx.conf.j2
+++ b/wordpress_playbooks/roles/wordpress/templates/nginx.conf.j2
@@ -48,6 +48,7 @@ http {
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
+            fastcgi_buffers 256 4k;
         }
   
     }  
